# Reservoir-Research

./: pyproject.toml
src/: test_basic_reservoir.ipynb
src/1_linregress/: dataset1.csv  linregress.py
src/2_basic_reservoir/: test_basic_reservoir.ipynb
src/linregress/: data_linregress.ipynb
src/week1/: README.md
src/week1/2_basic_reservoir/: test_basic_reservoir.ipynb
src/week1/3_ridgeregress/: dataset2.csv
src/week1/5_oscillation_sim/: oscillation.ipynb
src/week2/1_oscillation_reservoir/: oscillation_bias.ipynb
src/week2/2_mult_springs/: mult_spring_sin.ipynb  mult_springs.ipynb  spring_grid.ipynb
