[project]
name = "reservoir-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.11.0",
    "datashader>=0.19.1",
    "fastplotlib>=0.6.1",
    "glfw>=2.10.0",
    "imageio>=2.37.3",
    "imgui-bundle>=1.92.801",
    "ipywidgets>=8.1.8",
    "jupyter-rfb>=1.0.2",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyqt6>=6.11.0",
    "pyqtgraph>=0.14.0",
    "pyvista[jupyter]>=0.48.4",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
]
